# core

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
rs/analytics/: Cargo.toml
rs/analytics/src/: analyze_logs.rs  analyze_resource.rs  analyze_state.rs  histogram.rs  main.rs  utils.rs
rs/chat-backend/: Cargo.toml  README.md
rs/chat-backend/src/: lib.rs  main.rs
rs/chat-backend/src/chat/: error.rs  header.rs  mod.rs  process.rs  process_chat.rs  route.rs  route_chat_completion.rs  tool_call_trace.rs
rs/chat-backend/src/handle/: handle_chat_completion.rs  mod.rs
rs/chat-backend/src/route/: mod.rs  route_add_cluster.rs  route_chat_completion.rs
rs/chat-backend/src/util/: mod.rs  tool_call_trace.rs
rs/data-intake/: Cargo.toml  README.md
rs/data-intake/src/: error.rs  lib.rs  main.rs  server.rs  testutil.rs
rs/data-intake/src/customresource/: route.rs
rs/data-intake/src/event/: route.rs
rs/data-intake/src/log/: error.rs  route.rs
rs/data-intake/src/process/: chunk.rs  log.rs  logs.rs  metadata.rs  mod.rs  multipart.rs
rs/data-intake/src/resource/: route.rs
rs/data-intake/src/route/: customresource.rs  error.rs  event.rs  intake_event.rs  intake_log.rs  log.rs  mod.rs  resource.rs
rs/data-intake/src/routes/: logline.rs  logs.rs  mod.rs
rs/data-intake/src/test_utils/: mock_data.rs  mock_server.rs  mock_stream.rs  mod.rs
rs/data-intake/src/utils/: mod.rs
rs/data-processing/: Cargo.toml  README.md
rs/data-processing/src/: error.rs  lib.rs  main.rs  run.rs
rs/data-processing/src/logs/: mod.rs
rs/data-processing/src/preprocessing/: log.rs
rs/data-processing/src/threads/: commit.rs  consume.rs  error.rs  json_util.rs  mod.rs  process.rs  process_event.rs  process_log.rs  process_resource.rs
rs/data-processing/src/util/: extract_metadata_owner.rs  json_diff.rs  mod.rs  whitelist.rs
rs/data-vectorizer/: Cargo.toml  README.md
rs/data-vectorizer/src/: error.rs  lib.rs  main.rs  run.rs  vectorize.rs  vectorize_class.rs
rs/data-vectorizer/src/vectorize/: mod.rs  vectorize_class.rs  vectorize_event.rs  vectorize_resource.rs  vectorizer.rs
rs/prompt-engine/: Cargo.toml
rs/prompt-engine/src/: error.rs  lib.rs  main.rs  server.rs
rs/prompt-engine/src/prompt/: augmentation.rs  error.rs  mod.rs  prompt.rs  route.rs  test_prompt.rs  understanding.rs
rs/shared/: Cargo.toml  README.md
rs/shared/src/: constant.rs  lib.rs
rs/shared/src/client/: fairing.rs  mod.rs  reqwest.rs
rs/shared/src/connections/: README.md  db_name.rs  dbname.rs  error.rs  mod.rs  util.rs
rs/shared/src/db/: mod.rs
rs/shared/src/mock/: rocket.rs
rs/shared/src/openai/: chat_complete.rs  chat_request_args.rs  embed.rs  mod.rs  request_builder.rs
rs/shared/src/preprocessing/: compare.rs  log.rs  mod.rs
rs/shared/src/process/: logs.rs
rs/shared/src/router/: mod.rs  rocket.rs
rs/shared/src/testdata/: mod.rs  usertestdata.rs
rs/shared/src/tracing/: mod.rs  setup.rs  setup_tracing.rs
rs/shared/src/types/: error.rs  kubeapidata.rs  metadata.rs  mod.rs  parsedline.rs  tokenizer.rs
rs/shared/src/utils/: json_util.rs  mod.rs  ratelimit.rs  test_util.rs
rs/tests/: Cargo.toml  README.md
rs/tests/fixtures/certificate-deletion/: apply_certificate_examples_hello-server-hik9s-ingress-tls_693b49a5-f55b-4219-8bc7-6479cfe82e90_174057856.yaml  delete_certificate_examples_hello-server-hik9s-ingress-tls_693b49a5-f55b-4219-8bc7-6479cfe82e90_174059012.yaml  delete_ingress_examples_hello-server-hik9s-ingress-tls_693b49a5-f55b-4219-8bc7-6479cfe82e90_174059012.yaml
rs/tests/fixtures/deployment-aggregation/: apply_deployment_examples_test1_88533c87-a26e-4b13-bd81-a056ecce5b93_141504715.yaml  apply_deployment_examples_test1_88533c87-a26e-4b13-bd81-a056ecce5b93_141508816.yaml  apply_deployment_examples_test1_88533c87-a26e-4b13-bd81-a056ecce5b93_141508819.yaml  apply_deployment_examples_test1_88533c87-a26e-4b13-bd81-a056ecce5b93_141513082.yaml  apply_deployment_examples_test1_88533c87-a26e-4b13-bd81-a056ecce5b93_141513091.yaml  apply_deployment_examples_test1_88533c87-a26e-4b13-bd81-a056ecce5b93_141517099.yaml  apply_deployment_examples_test1_88533c87-a26e-4b13-bd81-a056ecce5b93_141517131.yaml  apply_deployment_examples_test1_88533c87-a26e-4b13-bd81-a056ecce5b93_141521277.yaml  apply_deployment_examples_test1_88533c87-a26e-4b13-bd81-a056ecce5b93_141521306.yaml  apply_deployment_examples_test1_88533c87-a26e-4b13-bd81-a056ecce5b93_141525323.yaml  apply_deployment_examples_test1_88533c87-a26e-4b13-bd81-a056ecce5b93_141525366.yaml
rs/tests/fixtures/event-filter/: apply_event_examples_hello-server-597dbdc58-bz6zv.1809046a11754b30.yaml  apply_event_examples_hello-server-597dbdc58-bz6zv.1809046a11754b31.yaml
rs/tests/fixtures/pod-aggregation-by-replicaset/: apply_pod_examples_test1-656b95f57-mddjc_c4123476-5412-4119-9662-b800f48dfdb2_141504848.yaml  apply_pod_examples_test1-656b95f57-mddjc_c4123476-5412-4119-9662-b800f48dfdb2_141508814.yaml  apply_pod_examples_test1-656b95f57-mddjc_c4123476-5412-4119-9662-b800f48dfdb2_141508817.yaml  apply_pod_examples_test1-656b95f57-mddjc_c4123476-5412-4119-9662-b800f48dfdb2_141513080.yaml  apply_pod_examples_test1-656b95f57-mddjc_c4123476-5412-4119-9662-b800f48dfdb2_141513302.yaml  apply_pod_examples_test1-656b95f57-mddjc_c4123476-5412-4119-9662-b800f48dfdb2_141517097.yaml  apply_pod_examples_test1-656b95f57-pd8s5_56cf8a5b-3cb6-4a1b-8239-54be3ad06e55_141517129.yaml  apply_pod_examples_test1-656b95f57-pd8s5_56cf8a5b-3cb6-4a1b-8239-54be3ad06e55_141517430.yaml  apply_pod_examples_test1-656b95f57-pd8s5_56cf8a5b-3cb6-4a1b-8239-54be3ad06e55_141521275.yaml  apply_pod_examples_test1-656b95f57-pd8s5_56cf8a5b-3cb6-4a1b-8239-54be3ad06e55_141521304.yaml  apply_pod_examples_test1-656b95f57-pd8s5_56cf8a5b-3cb6-4a1b-8239-54be3ad06e55_141521493.yaml  apply_pod_examples_test1-656b95f57-pd8s5_56cf8a5b-3cb6-4a1b-8239-54be3ad06e55_141525321.yaml  apply_pod_examples_test1-656b95f57-pd8s5_56cf8a5b-3cb6-4a1b-8239-54be3ad06e55_141525363.yaml  (+1 more)
rs/tests/fixtures/skiplist-resource/: apply_pod_should_be_skipped.yaml  (+5 more)
rs/tests/src/: constant.rs  lib.rs  util.rs
(+141 files in other folders)
