[workspace]
resolver = "2"

members = ["rs/algorithm", "rs/data-intake", "rs/data-processing", "rs/shared"]

[workspace.package]
edition = "2021"

# OpenSSL dependency prevention
# by setting `default-features = false`

[workspace.dependencies]
algorithm = {path = "rs/algorithm"}
anyhow = "1.0.80"
chrono = {version = "0.4.35"}
dotenv = "0.15.0"
fluvio = {version = "0.23.1", default-features = false}
futures-util = "0.3.30"
greptimedb-ingester = {git = "https://github.com/GreptimeTeam/greptimedb-ingester-rust.git", rev = "2e6b0c5eb6a5e7549c3100e4d356b07d15cce66d"}
jsonwebtoken = {version = "9.3", default-features = false}
multipart = "0.18.0"
rand = "0.8.5"
redis = {version = "0.26.1", features = ["json"]}
reqwest = {version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
]}
rocket = {version = "0.5.1", features = ["json"]}
rstest = "0.22.0"
rustls = "0.23.12"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0.125", features = ["preserve_order"]}
shared = {path = "rs/shared"}
sqlx = {version = "0.8.0", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
]}
thiserror = "1.0"
tokio = "1.36.0"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
uuid7 = "1.0.0"
