[package]
edition.workspace = true
name = "analytics"
version = "0.1.0"

[dependencies]
indicatif = "0.17"
qdrant-client = {workspace = true}
serde_json = {workspace = true}
serde_yaml = {workspace = true}
shared = {workspace = true}
tabled = "0.17"
tokio = {workspace = true}
tracing = {workspace = true}
