[package]
edition.workspace = true
name = "analytics"
version = "0.1.0"

[dependencies]
qdrant-client = {workspace = true}
redis = {workspace = true}
serde_json = {workspace = true}
serde_yaml = {workspace = true}
shared = {workspace = true}
tabled = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
