[package]
edition.workspace = true
name = "chat-backend"
version = "0.3.6"

[dependencies]
anyhow = {workspace = true}
async-openai = {workspace = true}
rocket = {workspace = true}
rstest = {workspace = true}
serde = {workspace = true}
shared = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
