[package]
edition = "2021"
name = "data-intake"
version = "0.1.0"

[dependencies]
dotenv = {workspace = true}
greptimedb-ingester = {workspace = true}
multipart = {workspace = true}
rocket = {workspace = true}
rstest = {workspace = true}
rustls = {workspace = true}
serde_json = {workspace = true}
shared = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
