[package]
edition.workspace = true
name = "data-intake"
version = "0.2.3"

[lib]
name = "data_intake"
path = "src/lib.rs"

[dependencies]
greptimedb-ingester = {workspace = true}
multipart = {workspace = true}
rocket = {workspace = true}
rstest = {workspace = true}
rustls = {workspace = true}
serde_json = {workspace = true}
shared = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
