[package]
edition = "2021"
name = "data-processing"
version = "0.1.0"

[[bin]]
name = "data-processing"
path = "src/main.rs"

[dependencies]
dotenv = {workspace = true}
fluvio = {workspace = true}
futures-util = {workspace = true}
log-classification = {path = "../log-classification"}
rstest = {workspace = true}
shared = {path = "../shared"}
thiserror = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
