[package]
edition = "2021"
name = "data-processing"
version = "0.1.0"

[[bin]]
name = "data-processing"
path = "src/main.rs"

[dependencies]
algorithm = {workspace = true}
dotenv = {workspace = true}
fluvio = {workspace = true}
futures-util = {workspace = true}
greptimedb-ingester = {workspace = true}
rstest = {workspace = true}
serde_json = {workspace = true}
shared = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
