[package]
edition.workspace = true
name = "data-vectorizer"
version = "0.2.2"

[dependencies]
anyhow = {workspace = true}
futures-util = {workspace = true}
qdrant-client = {workspace = true}
rstest = {workspace = true}
serde_json = {workspace = true}
shared = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
