[package]
edition.workspace = true
name = "data-vectorizer"
version = "0.4.18"

[dependencies]
anyhow = {workspace = true}
futures-util = {workspace = true}
k8s-openapi = {workspace = true}
qdrant-client = {workspace = true}
rstest = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
serde_yaml = {workspace = true}
shared = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
