[package]
edition.workspace = true
name = "prompt-engine"
version = "0.2.1"

[dependencies]
async-openai = {workspace = true}
rocket = {workspace = true}
rstest = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
shared = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
