[package]
edition = "2021"
name = "shared"
version = "0.1.0"

[dependencies]
anyhow = "1.0.80"
greptimedb-ingester = {git = "https://github.com/GreptimeTeam/greptimedb-ingester-rust.git", rev = "2e6b0c5eb6a5e7549c3100e4d356b07d15cce66d"}
jsonwebtoken = {version = "9.3", default-features = false}
reqwest = {version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
]}
rocket = {version = "0.5.0-rc.3", features = ["json"]}
rstest = "0.18.2"
rustls = "0.23"
serde = {workspace = true}
sqlx = {version = "0.7.4", features = ["mysql", "runtime-tokio", "tls-rustls"]}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
uuid = "1.8.0"
