[package]
edition = "2021"
name = "shared"
version = "0.1.0"

[dependencies]
anyhow = {workspace = true}
chrono = {workspace = true}
fluvio = {workspace = true}
futures-util = {workspace = true}
greptimedb-ingester = {workspace = true}
jsonwebtoken = {workspace = true}
reqwest = {workspace = true}
rocket = {workspace = true}
rstest = {workspace = true}
rustls = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
sqlx = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
uuid7 = {workspace = true}
