[package]
edition = "2021"
name = "shared"
version = "0.1.0"

[dependencies]
anyhow = {workspace = true}
async-openai = {workspace = true}
chrono = {workspace = true}
dotenv = {workspace = true}
fluvio = {workspace = true}
futures-util = {workspace = true}
greptimedb-ingester = {workspace = true}
jsonwebtoken = {workspace = true}
qdrant-client = {workspace = true}
rand = {workspace = true}
redis = {workspace = true}
reqwest = {workspace = true}
rocket = {workspace = true}
rstest = {workspace = true}
rustls = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
sqlx = {workspace = true}
thiserror = {workspace = true}
tiktoken-rs = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
uuid7 = {workspace = true}
